--- a/customer-app/src/app/app.component.html
+++ b/customer-app/src/app/app.component.html
@@ -1,8 +1,10 @@
-<h1>
+<!-- <h1>
   {{title}}
 </h1>
 
 <button class="btn btn-primary" routerLink="/customers">Customers</button>
 <button class="btn btn-success" routerLink="/orders">Orders</button>
 <button class="btn btn-warning" routerLink="">Home</button>
+<router-outlet></router-outlet> -->
+
 <router-outlet></router-outlet>
